docs/9.2.8/README.md
---
doc_role: version_followup_plan
doc_purpose: Track 9.2.8 FSScript comparison-operator correctness follow-up.
version: 9.2.8
status: signed-off
created_at: 2026-06-26
updated_at: 2026-06-26
---

# 9.2.8 FSScript Comparison Operator Correctness Follow-Up

## Document Purpose

- doc_type: version-summary
- intended_for: execution-agent, reviewer, signoff-owner
- purpose: Track the next non-security FSScript code-risk cleanup after the 9.2.6 MethodFinder signoff.

## Scope

9.2.8 continues the FSScript code-risk mainline. It focuses on deterministic runtime correctness risks that can be exposed by focused unit tests before fixing.

## Work Items

| Item | Doc | Status | Owner Module | Summary |
|---|---|---|---|---|
| Less-than non-number comparison | `workitems/P1-fsscript-less-than-non-number-comparison.md` | signed-off | `foggy-fsscript` | Align `<` and `<=` with `>` and `>=` for non-number string/date-string comparisons. |

## Guardrails

- No Runtime API security, auth-code, RBAC, audit, or permission-model changes.
- No FSScript syntax change.
- No public Java API change unless explicitly documented in the work item.
- Prefer test-first exposure for each selected code risk.

## Progress Summary

- development: completed
- testing: completed
- quality: completed
- coverage: completed
- acceptance: signed-off
- experience: N/A, backend/runtime-only work.

## Verification Summary

| Scope | Command | Result |
|---|---|---|
| Red test before fix | `mvn -pl foggy-fsscript -Dtest=ComparisonOperatorTest test` | Failed as expected: 4 tests run, 2 errors. |
| Focused test after fix | `mvn -pl foggy-fsscript -Dtest=ComparisonOperatorTest test` | Passed: 4 tests run, 0 failures, 0 errors. |
| Related expression tests | `mvn -pl foggy-fsscript "-Dtest=ComparisonOperatorTest,OperatorPrecedenceTest,InNotInExpTest" test` | Passed: 52 tests run, 0 failures, 0 errors. |
| Full module regression | `mvn -pl foggy-fsscript test` | Passed: 371 tests run, 0 failures, 0 errors, 0 skipped. |

## Signoff Records

| Record | Path | Status |
|---|---|---|
| Implementation quality gate | `quality/P1-fsscript-less-than-non-number-comparison-implementation-quality.md` | reviewed, ready-for-coverage-audit |
| Test coverage audit | `coverage/P1-fsscript-less-than-non-number-comparison-coverage-audit.md` | reviewed, ready-for-acceptance |
| Version acceptance | `acceptance/version-signoff.md` | signed-off, accepted |

## Acceptance Status

- acceptance_status: signed-off
- acceptance_decision: accepted
- signed_off_by: codex
- signed_off_at: 2026-06-26
- acceptance_record: docs/9.2.8/acceptance/version-signoff.md
- blocking_items: none
- follow_up_required: no
